--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ repository = "https://github.com/schlerp/brunoise/"
 [dependencies]
 pyembed = "0.24"
 actix-web = "4"
+diesel = { version = "2.1.0", features = ["sqlite"] }
+dotenvy = "0.15"
+serde = { version = "1.0", features = ["derive"] }
