--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ actix-web = "4"
 diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
 dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
+log = "0.4.20"
+env_logger = "0.10.0"
