--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,14 +4,15 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
+    - id: trailing-whitespace
+    - id: end-of-file-fixer
+    - id: check-yaml
+    - id: check-added-large-files
 
   - repo: https://github.com/doublify/pre-commit-rust
     rev: v1.0
     hooks:
-    -   id: cargo-check
-    -   id: clippy
-    -   id: fmt
+    - id: cargo-check
+    - id: clippy
+    - id: fmt
+      args: ['--check', "--"]
